examples/test/testpolicy19600.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19600
  namespace: namespace145
spec:
  podSelector:
    matchLabels:
      key8: value35
      key38: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value1
      podSelector:
        matchLabels:
          key42: value11
          key13: value21
